tests/fail/deps/cyclic_dependency2.glu
let c = import "tests/fail/deps/cyclic_dependency.glu"
in 1
